--- a/main.html
+++ b/main.html
@@ -1,16 +1,63 @@
 <!DOCTYPE html>
-
-<html>
-
+<html lang="en">
 <head>
-	<link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>AccioJob Blog</title>
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+    <!-- Marquee Header -->
+    <marquee>
+        <h1>Welcome to Accio Jobs!</h1>
+    </marquee>
 
+    <!-- Blog Link -->
+    <h1>
+        <a href="https://acciojob.com/blog" target="_blank" rel="noopener noreferrer">
+            Accio Job's Blog
+        </a>
+    </h1>
+
+    <!-- Articles Section -->
+    <div>
+        <!-- Article 1 -->
+        <article>
+            <h2>
+                <a href="https://acciojob.com/blog/brute-force-vs-optimization" target="_blank" rel="noopener noreferrer">
+                    Brute Force vs. Optimization
+                </a>
+            </h2>
+            <img src="https://images.unsplash.com/flagged/photo-1556514767-5c270b96a005?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwxMTc3M3wwfDF8c2VhcmNofDI2fHxvcHRpbWl6YXRpb258ZW58MHx8fHwxNjcxMDAyOTIz&ixlib=rb-4.0.3&q=80&w=2000" alt="Brute Force vs. Optimization" height="200px">
+            <p>
+                We can say that optimization is a technique used to make the solution more efficient in terms of time or space complexity...
+            </p>
+        </article>
+
+        <!-- Article 2 -->
+        <article>
+            <h2>
+                <a href="https://acciojob.com/blog/dsa-vs-competitive-programming" target="_blank" rel="noopener noreferrer">
+                    DSA vs. Competitive Programming
+                </a>
+            </h2>
+            <img src="https://images.unsplash.com/photo-1504384308090-c894fdcc538d?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwxMTc3M3wwfDF8c2VhcmNofDQxfHxjb21wZXRpdHZlJTIwcHJvZ3JhbW1pbmd8ZW58MHx8fHwxNjcwOTk4ODU0&ixlib=rb-4.0.3&q=80&w=2000" alt="DSA vs. Competitive Programming" height="200px">
+            <p>
+                DSA or Competitive programming? This is one of the most debated questions among coding enthusiasts...
+            </p>
+        </article>
+
+        <!-- Article 3 -->
+        <article>
+            <h2>
+                <a href="https://acciojob.com/blog/complete-guide-on-flexbox" target="_blank" rel="noopener noreferrer">
+                    Complete Guide on FlexBox
+                </a>
+            </h2>
+            <img src="https://acciojob.com/blog/content/images/size/w2000/2023/02/Screenshot-2023-02-06-at-7.28.31-PM.png" alt="Complete Guide on FlexBox" height="200px">
+            <p>
+                As a job seeker, you may wonder how FlexBox can help you design responsive web pages effectively...
+            </p>
+        </article>
+    </div>
 </body>
-
 </html>
